[gd_scene load_steps=3 format=3 uid="uid://cwcqneccd8g4g"]

[ext_resource type="Script" uid="uid://dfcldctbit6ae" path="res://ui/pause_menu.gd" id="1_50142"]
[ext_resource type="PackedScene" uid="uid://cc4701uyf5r76" path="res://ui/audio_controls.tscn" id="2_ejwgg"]

[node name="PauseMenu" type="Node2D" node_paths=PackedStringArray("resume_button", "abandon_button", "credits_button", "exit_button", "fullscreen_button")]
script = ExtResource("1_50142")
resume_button = NodePath("CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox/ResumeButton")
abandon_button = NodePath("CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox/AbandonButton")
credits_button = NodePath("CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox/CreditsButton")
exit_button = NodePath("CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox/ExitButton")
fullscreen_button = NodePath("CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox2/FullscreenButton")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 425.0
offset_bottom = 272.0

[node name="Control" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Control/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="CenterContainer/Control/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonVBox" type="VBoxContainer" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
text = "Resume	"

[node name="AbandonButton" type="Button" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
text = "Abandon"

[node name="CreditsButton" type="Button" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
text = "Exit"

[node name="AudioControls" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_ejwgg")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonVBox2" type="VBoxContainer" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FullscreenButton" type="Button" parent="CenterContainer/Control/MarginContainer/VBoxContainer/VBoxContainer/ButtonVBox2"]
layout_mode = 2
text = "Fullscreen"
